feat: Add label to Note And Delete it APIs added
