# Fundoo_Notes/app/utility/validation.js
@@ -32,6 +32,63 @@ class ValidatorSchema {
                 .required()
                 .pattern(new RegExp("^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#\$%\^&\*])(?=.{8,})"))
   });
+
+  authLabel = Joi.object({
+    labelName: Joi.string()
+                  .min(1)
+                  .max(25)
+                  .required(),
+
+    userId: Joi.string()
+              .required()
+  });
+
+  authupdateLabel = Joi.object({
+    labelName: Joi.string()
+                  .min(1)
+                  .max(25)
+                  .required(),
+
+    userId: Joi.string()
+              .required(),
+
+    labelId: Joi.string()
+              .required()
+              .pattern(new RegExp("^[a-zA-z0-9]{24}$"))
+  });
+
+  authCreateNote = Joi.object({
+    userId: Joi.string()
+              .required(),
+
+    title: Joi.string()
+              .min(0)
+              .max(200)
+              .required(),
+
+    description: Joi.string()
+              .min(1)
+              .max(3000)
+              .required(),
+  });
+
+  authUpdateNote = Joi.object({
+    userId: Joi.string()
+              .required(),
+
+    noteId: Joi.string()
+              .required(),
+
+    title: Joi.string()
+              .min(0)
+              .max(200)
+              .required(),
+
+    description: Joi.string()
+              .min(1)
+              .max(3000)
+              .required(),
+  });
 }
 
 module.exports = new ValidatorSchema();
